# informatics_laboratories_8_1

./: README.md  pyproject.toml
web/: settings.py
